--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -6,26 +6,29 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".TaskFragment">
+    tools:context=".ui.fragments.taskFragment.TaskFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        app:counterMaxLength="20"
         android:layout_height="wrap_content"
+        app:counterMaxLength="20"
         app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/taskEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/custom_input"
             android:hint="@string/taskText" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        app:cornerRadius="8dp"
         android:id="@+id/taskButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save"
+        android:layout_margin="16dp"
+        android:background="@drawable/custom_input"
+        android:text="Save text"
         android:textAllCaps="false" />
 </LinearLayout>
