--- a/app/src/main/res/layout/item_board.xml
+++ b/app/src/main/res/layout/item_board.xml
@@ -41,7 +41,7 @@
 
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/boardBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
