--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="buttonStyle">@style/ButtonStyle</item>
+
+<!--        <item name="materialButtonStyle">@style/ButtonStyle</item>-->
     </style>
 
     <style name="ButtonStyle" parent="Widget.MaterialComponents.Button">
