--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.onboard.BoardFragment">
+    tools:context="com.geektech.taskapp36.kg.geektech.taskapp36.ui.onboard.BoardFragment">
 
     <TextView
         android:id="@+id/skip"
