--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.notifications.NotificationsFragment">
+    tools:context="com.geektech.taskapp36.kg.geektech.taskapp36.ui.fragments.notifications.NotificationsFragment">
 
     <TextView
         android:id="@+id/text_notifications"
