--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ui.fragments.taskFragment.TaskFragment">
+    tools:context="com.geektech.taskapp36.kg.geektech.taskapp36.ui.fragments.taskFragment.TaskFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -22,6 +22,12 @@
             android:background="@drawable/custom_input"
             android:hint="@string/taskText" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_gravity="center_horizontal"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/taskButton"
